// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IGCParser parse() parses valid IGC files 1`] = `
Object {
  "enl": 0.04,
  "extensions": Object {
    "ACZ": "100",
    "ENL": "040",
    "FXA": "060",
    "GSP": "00051",
    "OAT": "2400",
    "TAS": "00000",
    "TRT": "650",
    "VAT": "00010",
  },
  "fixAccuracy": 60,
  "gpsAltitude": 49,
  "latitude": 51.0107,
  "longitude": 7.010066666666667,
  "pressureAltitude": -42,
  "time": "10:18:26",
  "timestamp": 1500113906000,
  "valid": true,
}
`;

exports[`IGCParser parse() parses valid IGC files 2`] = `
Object {
  "enl": 0.041,
  "extensions": Object {
    "ACZ": "090",
    "ENL": "041",
    "FXA": "070",
    "GSP": "06662",
    "OAT": "2010",
    "TAS": "24341",
    "TRT": "60-",
    "VAT": "01290",
  },
  "fixAccuracy": 70,
  "gpsAltitude": 873,
  "latitude": 50.84336666666667,
  "longitude": 6.4120333333333335,
  "pressureAltitude": 773,
  "time": "11:37:45",
  "timestamp": 1500118665000,
  "valid": true,
}
`;

exports[`IGCParser parse() parses valid IGC files 3`] = `
Object {
  "enl": 0.04,
  "extensions": Object {
    "ACZ": "120",
    "ENL": "040",
    "FXA": "070",
    "GSP": "90033",
    "OAT": "2190",
    "TAS": "89120",
    "TRT": "54-",
    "VAT": "00740",
  },
  "fixAccuracy": 70,
  "gpsAltitude": 478,
  "latitude": 50.60658333333333,
  "longitude": 6.79495,
  "pressureAltitude": 378,
  "time": "12:28:38",
  "timestamp": 1500121718000,
  "valid": true,
}
`;

exports[`IGCParser parse() parses valid IGC files 4`] = `
Object {
  "enl": 0.04,
  "extensions": Object {
    "ACZ": "090",
    "ENL": "040",
    "FXA": "060",
    "GSP": "00153",
    "OAT": "2610",
    "TAS": "00000",
    "TRT": "30-",
    "VAT": "00010",
  },
  "fixAccuracy": 60,
  "gpsAltitude": 50,
  "latitude": 51.0137,
  "longitude": 7.007866666666667,
  "pressureAltitude": -40,
  "time": "14:39:10",
  "timestamp": 1500129550000,
  "valid": true,
}
`;

exports[`IGCParser parse() throws if HFDTE is missing 1`] = `"Missing HFDTE record"`;

exports[`IGCParser parseARecord() throws for invalid records 1`] = `"Invalid A record at line 0: "`;

exports[`IGCParser parseARecord() throws for invalid records 2`] = `"Invalid A record at line 0: HFDTE"`;

exports[`IGCParser parseARecord() throws for invalid records 3`] = `"Invalid A record at line 0: HFDTEXXXXXX"`;

exports[`IGCParser parseARecord() throws for invalid records 4`] = `"Invalid A record at line 0: HFDTE1234?6"`;

exports[`IGCParser parseBRecord() throws for invalid records 1`] = `"Invalid B record at line 0: "`;

exports[`IGCParser parseBRecord() throws for invalid records 2`] = `"Invalid B record at line 0: B10a6555103888N00703115EA0065700751"`;

exports[`IGCParser parseBRecord() throws for invalid records 3`] = `"Invalid B record at line 0: B1026555103888X00703115EA0065700751"`;

exports[`IGCParser parseBRecord() throws for invalid records 4`] = `"Invalid B record at line 0: B102655510Z888N00703115EA0065700751"`;

exports[`IGCParser parseBRecord() throws for invalid records 5`] = `"Invalid B record at line 0: B1026555103888N00703115NA0065700751"`;

exports[`IGCParser parseBRecord() throws for missing "dateHeader" 1`] = `"Missing HFDTE record before first B record"`;

exports[`IGCParser parseCopilot() throws for invalid records 1`] = `"Invalid CM2 header at line 0: "`;

exports[`IGCParser parseCopilot() throws for invalid records 2`] = `"Invalid CM2 header at line 0: HXCM2:John Doe"`;

exports[`IGCParser parseCopilot() throws for invalid records 3`] = `"Invalid CM2 header at line 0: HFCM1:John Doe"`;

exports[`IGCParser parseDateHeader() throws for invalid records 1`] = `"Invalid DTE header at line 0: "`;

exports[`IGCParser parseDateHeader() throws for invalid records 2`] = `"Invalid DTE header at line 0: HFDTE"`;

exports[`IGCParser parseDateHeader() throws for invalid records 3`] = `"Invalid DTE header at line 0: HFDTEXXXXXX"`;

exports[`IGCParser parseDateHeader() throws for invalid records 4`] = `"Invalid DTE header at line 0: HFDTE1234?6"`;

exports[`IGCParser parseIRecord() throws for invalid records 1`] = `"Invalid I record at line 0: "`;

exports[`IGCParser parseIRecord() throws for invalid records 2`] = `"Invalid I record at line 0: I023638FXA"`;

exports[`IGCParser parseIRecord() throws for invalid records 3`] = `"Invalid I record at line 0: I0136FXA38"`;

exports[`IGCParser parsePilot() throws for invalid records 1`] = `"Invalid PLT header at line 0: "`;

exports[`IGCParser parsePilot() throws for invalid records 2`] = `"Invalid PLT header at line 0: HXPLT:John Doe"`;

exports[`IGCParser parsePilot() throws for invalid records 3`] = `"Invalid PLT header at line 0: HFPLX:John Doe"`;
